Correct typo in docs

--- a/globalvals/globalvals.tex
+++ b/globalvals/globalvals.tex
@@ -52,7 +52,7 @@ For example, you might call
 \DescribeMacro{\useVal} 
 To use a defined variable, use the command
 \begin{quote}
-	|\useVar{|\meta{key}|}|
+	|\useVal{|\meta{key}|}|
 \end{quote}
 
 For instance, the values saved in section \ref{sec:defining} could be recalled using
